# clipsmith-a_cpp_program

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  clipsmith.db  clipsmith_1.0.0_amd64.deb  make_deb.sh  release_notes.md  run.sh
resources/: resources.qrc
src/: main.cpp
src/core/: ClipboardMonitor.cpp  ClipboardMonitor.hpp  DatabaseManager.cpp  DatabaseManager.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp
src/plugins/: TextProcessor.cpp  TextProcessor.hpp
